feat(main): Refactoring and fixing some problems with upload data form